prevent horizontal scrolling on mobiles

--- a/www/views/Extjs3/themes/Paper/src/_modules.scss
+++ b/www/views/Extjs3/themes/Paper/src/_modules.scss
@@ -183,12 +183,19 @@ i.icon.em-low_priority {
 
 	> * {
 		color:inherit;
-
 	}
 
+	// to prevent horizontal scrolling on mobiles
 	* {
-		max-width: 100% !important;
+		max-width: 100vw !important;
 	}
+
+	@media screen and (max-width: 1000px) {
+		table {
+			width: auto !important;
+		}
+	}
+	//  end to prevent horizontal scrolling on mobiles
 	
 	p.MsoListParagraph, li.MsoListParagraph, div.MsoListParagraph
 	{
